Fixed an issue was causing the canvas  to wrap on multipl e lines

--- a/src/styles/canvas.scss
+++ b/src/styles/canvas.scss
@@ -2455,3 +2455,6 @@ main {
 .privacy-dropdown .dropdown-pane{
   width: 256px;
 }
+.columns.main-content.large-8 {
+  overflow: hidden;
+}
